[gd_scene load_steps=5 format=3 uid="uid://wbrew8h6d377"]

[ext_resource type="Script" path="res://scripts/ui/single_unit_manager.gd" id="1_f0b64"]
[ext_resource type="Script" path="res://scripts/ui/placement_manager.gd" id="2_q6ccs"]
[ext_resource type="PackedScene" uid="uid://cx208lxpn8m4d" path="res://scenes/ui/unit_selector.tscn" id="3_8nqij"]
[ext_resource type="PackedScene" uid="uid://cmf8krij1m3ow" path="res://scenes/board_view.tscn" id="4_gw23s"]

[node name="SingleUnitManager" type="Node2D"]
script = ExtResource("1_f0b64")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="PlacementManager" type="Node" parent="."]
script = ExtResource("2_q6ccs")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="UI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1

[node name="ColorRect3" type="ColorRect" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.341176, 0.447059, 0.466667, 1)

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -99.0
grow_horizontal = 0
grow_vertical = 2
color = Color(0.146319, 0.237705, 0.284286, 0.509804)

[node name="UnitSelector" parent="CanvasLayer/UI" instance=ExtResource("3_8nqij")]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
offset_left = -84.0
offset_top = 6.0
offset_right = -10.0
offset_bottom = -9.0
grow_horizontal = 0

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 120.0
grow_vertical = 2
color = Color(0.146319, 0.237705, 0.284286, 0.509804)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 14.0
offset_right = 115.0
offset_bottom = -10.0
grow_vertical = 2

[node name="Title" type="Label" parent="CanvasLayer/UI/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "NW Unit Manager"
horizontal_alignment = 1

[node name="BudgetLabel" type="Label" parent="CanvasLayer/UI/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 8
text = "Budget: 0"
autowrap_mode = 2

[node name="SubmitButton" type="Button" parent="CanvasLayer/UI/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Submit Army"

[node name="ClearButton" type="Button" parent="CanvasLayer/UI/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Clear Board"

[node name="WarningLabel" type="Label" parent="CanvasLayer/UI/VBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 8
autowrap_mode = 3

[node name="BackButton" type="Button" parent="CanvasLayer/UI/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_font_sizes/font_size = 8
text = "Back"

[node name="BoardView" parent="." instance=ExtResource("4_gw23s")]
scale = Vector2(0.5, 0.5)
